--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "serverless-scriptable-plugin": "^1.3.0",
+    "serverless-stage-manager": "^1.0.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^1.1.0",
