--- a/serverless.yml
+++ b/serverless.yml
@@ -107,11 +107,11 @@ resources:
                     [ "arn:aws:s3:::", { "Ref": "StaticFilesS3Bucket" }, "/*" ],
                   ]
 
-    CloudFrontOriginIdentity:
+    CloudFrontOriginAccessIdentity:
       Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
       Properties:
         CloudFrontOriginAccessIdentityConfig:
-          Comment: 'Origin identity'
+          Comment: !Sub ${AWS::StackName}
 
     CloudFrontDistribution:
       Type: AWS::CloudFront::Distribution
@@ -128,13 +128,16 @@ resources:
                   - RegionalDomainName
               Id:
                 Ref: StaticFilesS3Bucket
-              S3OriginConfig: { }
+              S3OriginConfig:
+                OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}
+              OriginPath: /my-content
           Enabled: 'true'
           DefaultRootObject: index.html
           CustomErrorResponses:
             - ErrorCode: 404
               ResponseCode: 200
               ResponsePagePath: /index.html
+          CacheBehaviors: []
           DefaultCacheBehavior:
             AllowedMethods:
               - DELETE
